--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,4 @@
 services:
-  open-webui:
-    image: ghcr.io/open-webui/open-webui:cuda
-    environment:
-      ENABLE_RAG_WEB_SEARCH: True
-      RAG_WEB_SEARCH_ENGINE: "searxng"
-      RAG_WEB_SEARCH_RESULT_COUNT: 3
-      RAG_WEB_SEARCH_CONCURRENT_REQUESTS: 10
-      SEARXNG_QUERY_URL: "http://searxng:8080/search?q=<query>"
   searxng:
     container_name: searxng
     image: searxng/searxng:latest
@@ -29,3 +21,13 @@ services:
       options:
         max-size: "1m"
         max-file: "1"
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:cuda
+    environment:
+      ENABLE_RAG_WEB_SEARCH: True
+      RAG_WEB_SEARCH_ENGINE: "searxng"
+      RAG_WEB_SEARCH_RESULT_COUNT: 3
+      RAG_WEB_SEARCH_CONCURRENT_REQUESTS: 10
+      SEARXNG_QUERY_URL: "http://searxng:8080/search?q=<query>"
+    ports:
+      - "3000:8080"
